# prompt_chain_project

./: .gitignore  pyproject.toml  readme.md  requirements.txt
notebooks/: project.ipynb
